[gd_scene load_steps=2 format=3 uid="uid://d1disfv2lrkn4"]

[ext_resource type="Script" uid="uid://cjgem6lamru1p" path="res://scripts/settings.gd" id="1_5p8wc"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_5p8wc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_right = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "ACTIVATE"

[node name="Temperature_Inc" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.001
ticks_on_borders = true

[node name="Label_IncrementT" type="Label" parent="MarginContainer/VBoxContainer/Temperature_Inc"]
layout_mode = 0
offset_left = -122.0
offset_top = -17.0
offset_right = 64.0
offset_bottom = 32.0
text = "Temperature
increment"

[node name="Label_IncValue" type="Label" parent="MarginContainer/VBoxContainer/Temperature_Inc"]
layout_mode = 0
offset_left = 94.0
offset_top = 17.0
offset_right = 134.0
offset_bottom = 40.0
text = "0"

[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Temperature_Inc" to="." method="_on_increment_value_changed"]
